new styles added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>this is a heading</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-         Neque necessitatibus, quidem ut provident, est ad perferendis an
+         Neque necessitatibus, ident, est ad perferendis an
          imi vitae nam tempora ipsum odit! Dolorem architecto voluptatum,
           animi dolore quas quos magni?</p>
 </body>
