--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
     <title>using git hub</title>
 </head>
 <body>
-    <h1>this is a heading</h1>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
          Neque necessitatibus, ident, est ad perferendis an
          imi vitae nam tempora ipsum odit! Dolorem architecto voluptatum,
           animi dolore quas quos magni?</p>
+          <p>
+           
+            pellendus dolore dolor accusantium blanditiis commodi ducimus
+             corporis molestias ipsa et, quo tempora, ipsum, exce
+            pturi modi laboriosam asperiores aliquid! Praesentium, placeat minus.
+          </p>
+          <ul>
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+            <li>item 5</li>
+            <li>item 6</li>
+          </ul>
 </body>
 </html>
