--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>using git hub</title>
 </head>
 <body>
+  <h2>this is heading 2</h2>
+  
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.
          Neque necessitatibus, ident, est ad perferendis an
          imi vitae nam tempora ipsum odit! Dolorem architecto voluptatum,
